<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:text="Are you sure?"
        android:id="@+id/view"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Approve"
        android:id="@+id/approve"
        android:layout_gravity="center"
        android:layout_marginTop="5dp" />
</LinearLayout>