...
            app:met_singleLineEllipsis="true"
            />

    </LinearLayout>

    <info.hoang8f.widget.FButton
        android:id="@+id/btnLogin"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
...
